# TaskMasterPro

./: .gitignore  CMakeLists.txt  TaskManager.cpp  TaskManager.h  TaskStoreManager.h  edittaskwindow.cpp  edittaskwindow.h  edittaskwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  suretodeletealltasks.cpp  suretodeletealltasks.h  suretoremovetaskwindow.cpp  suretoremovetaskwindow.h  suretoremovetaskwindow.ui
src/: main.cpp
src/edit_task_src/: edittaskwindow.cpp  edittaskwindow.h  edittaskwindow.ui
src/sure2delete_alltasks/: suretodeletealltasks.ui
src/task/: Task.cpp  Task.h
src/task_manager/: TaskManager.cpp  TaskManager.h
src/task_store_manager/: TaskStoreManager.cpp  TaskStoreManager.h
src/whole_task_list_window/: wholetasklistwindow.cpp  wholetasklistwindow.h  wholetasklistwindow.ui
